# SIMPL

./: .clang-format-ignore  .gitignore  .travis.yml  CMakeLists.txt  Contributing.md  Contributors.md  ReadMe-SIMPL.md  ReadMe.md  SIMPLConfig.cmake  azure-pipelines.yml
PyBind11/: CMakeLists.txt  GeneratePythonBindings.cpp  PyBin11_Notes.md  Pybind11_Notes.md  SIMPLPy.cxx  SIMPLPyBind11Config.h.in  SIMPLib_Pybindings.cxx
PyBind11/SIMPLib/CoreFilters/: DataContainerReader_Pybind.h  DataContainerWriter_Pybind.h
PyBind11/SIMPLib/DataContainers/: DataContainerArrayProxy_Pybind.h  DataContainerArray_Pybind.h
PyBind11/SIMPLib/Filtering/: AbstractFilter_Pybind.h  FilterPipeline_Pybind.h
PyBind11/Templates/: DerivedSharedPointerClassInit.txt  ModuleCode_Template.cpp  Pybind11TopMatter.txt  SharedPointerClassInit.txt  SimpleClassInit.txt
PyBind11/Testing/Python/: TestBindings.py
Source/H5Support/: CMakeLists.txt  H5Functions.cpp  H5Lite.cpp  H5Lite.h  H5Macros.h  H5ScopedErrorHandler.h  H5ScopedSentinel.h  H5SupportDLLExport.h  H5Utilities.cpp  H5Utilities.h  HDF5ScopedFileSentinel.cpp  HDF5ScopedFileSentinel.h  QH5Lite.cpp  QH5Lite.h  QH5Utilities.cpp  QH5Utilities.h
Source/H5Support/Test/: BigHDF5DatasetTest.cpp  CMakeLists.txt  H5LiteTest.cpp  H5SupportTestMain.cpp.in  H5UtilitiesTest.cpp  TestMain.cpp.in
Source/REST/RESTServer/: CMakeLists.txt  SIMPLRestServer.ini  SIMPLRestServer_API.md  main.cpp
Source/SIMPLib/: CMakeLists.txt  SIMPLibConfiguration.h.in  SIMPLibMacros.cmake
Source/SIMPLib/Common/: AbstractComparison.cpp  AbstractComparison.h  AbstractDecisionFilter.cpp  AbstractDecisionFilter.h  AbstractFilter.cpp  AbstractFilter.h  AbstractMessage.cpp  AbstractMessage.h  AppVersion.cpp  AppVersion.h  ComparisonInputs.cpp  ComparisonInputs.h  ComparisonInputsAdvanced.cpp  ComparisonInputsAdvanced.h  ComparisonSet.cpp  ComparisonSet.h  ComparisonValue.cpp  ComparisonValue.h  Constants.h  CreatedArrayHelpIndexEntry.cpp  CreatedArrayHelpIndexEntry.h  DocRequestManager.cpp  DocRequestManager.h  EnsembleInfo.cpp  EnsembleInfo.h  FilterFactory.hpp  FilterManager.cpp  FilterManager.h  FilterMessage.cpp  FilterMessage.h  FilterPipeline.cpp  FilterPipeline.h  GenericMessage.cpp  GenericMessage.h  IDataArrayFilter.cpp  IDataArrayFilter.h  IFilterFactory.hpp  IMessageHandler.h  INamedCollection.cpp  INamedCollection.h  (+39 more)
Source/SIMPLib/CoreFilters/: ApplyImageTransforms.cpp  ApplyImageTransforms.h  ArrayCalculator.cpp  ArrayCalculator.h  Breakpoint.cpp  Breakpoint.h  ChangeGlobalValue.cpp  ChangeGlobalValue.h  CombineAttributeArrays.cpp  CombineAttributeArrays.h  CombineAttributeMatrices.cpp  CombineAttributeMatrices.h  ConditionalSetValue.cpp  ConditionalSetValue.h  ConvertColorToGrayScale.cpp  ConvertColorToGrayScale.h  ConvertData.cpp  ConvertData.h  ConvertDataContainerGeometry.cpp  ConvertDataContainerGeometry.h  CopyFeatureArrayToElementArray.cpp  CopyFeatureArrayToElementArray.h  CopyObject.cpp  CopyObject.h  CoreResources.qrc  CreateAttributeMatrix.cpp  CreateAttributeMatrix.h  CreateDataArray.cpp  CreateDataArray.h  CreateDataContainer.cpp  CreateDataContainer.h  CreateFeatureArrayFromElementArray.cpp  CreateFeatureArrayFromElementArray.h  CreateGeometry.cpp  CreateGeometry.h  CreateGridMontage.cpp  CreateGridMontage.h  CreateImageGeometry.cpp  CreateImageGeometry.h  CreateStringArray.cpp  (+98 more)
Source/SIMPLib/DataArrays/: DataArray.cpp  DataArray.hpp  DynamicListArray.hpp  IDataArray.cpp  IDataArray.h  IDataArrayFilter.cpp  IDataArrayFilter.h  NeighborList.cpp  NeighborList.hpp  SourceList.cmake  StatsDataArray.cpp  StatsDataArray.h  StringDataArray.cpp  StringDataArray.h  StringDataArray.hpp  StructArray.hpp
Source/SIMPLib/DataContainers/: AbstractMontage.cpp  AbstractMontage.h  AbstractTileIndex.cpp  AbstractTileIndex.h  AttributeMatrix.cpp  AttributeMatrix.h  AttributeMatrixProxy.cpp  AttributeMatrixProxy.h  DataArrayPath.cpp  DataArrayPath.h  DataArrayProxy.cpp  DataArrayProxy.h  DataContainer.cpp  DataContainer.h  DataContainerArray.cpp  DataContainerArray.h  DataContainerArrayProxy.cpp  DataContainerArrayProxy.h  DataContainerBundle.cpp  DataContainerBundle.h  DataContainerGrid.cpp  DataContainerGrid.h  DataContainerProxy.cpp  DataContainerProxy.h  DataStructureUtilities.cpp  DataStructureUtilities.h  DsnIterators.h  GridMontage.cpp  GridMontage.h  GridTileIndex.cpp  GridTileIndex.h  IDataContainerBundle.cpp  IDataContainerBundle.h  IDataStructureContainerNode.hpp  IDataStructureNode.cpp  IDataStructureNode.h  MontageSupport.cpp  RenameDataPath.cpp  RenameDataPath.h  SourceList.cmake
Source/SIMPLib/FilterParameters/: AbstractFilterParametersReader.cpp  AbstractFilterParametersReader.h  AbstractFilterParametersWriter.cpp  AbstractFilterParametersWriter.h  AbstractIOFilterParameter.cpp  AbstractIOFilterParameter.h  AttributeMatrixCreationFilterParameter.cpp  AttributeMatrixCreationFilterParameter.h  AttributeMatrixSelectionFilterParameter.cpp  AttributeMatrixSelectionFilterParameter.h  AxisAngleFilterParameter.cpp  AxisAngleFilterParameter.h  AxisAngleInput.cpp  AxisAngleInput.h  BooleanFilterParameter.cpp  BooleanFilterParameter.h  CalculatorFilterParameter.cpp  CalculatorFilterParameter.h  ChoiceFilterParameter.cpp  ChoiceFilterParameter.h  ChoiceFilterParameter.h.ORc468  ComparisonSelectionAdvancedFilterParameter.cpp  ComparisonSelectionAdvancedFilterParameter.h  ComparisonSelectionFilterParameter.cpp  ComparisonSelectionFilterParameter.h  ConstrainedDoubleFilterParameter.cpp  ConstrainedDoubleFilterParameter.h  ConstrainedFilterParameter.cpp  ConstrainedFilterParameter.h  ConstrainedIntFilterParameter.cpp  ConstrainedIntFilterParameter.h  DataArrayCreationFilterParameter.cpp  DataArrayCreationFilterParameter.h  DataArraySelectionFilterParameter.cpp  DataArraySelectionFilterParameter.h  DataBundleSelectionFilterParameter.cpp  DataBundleSelectionFilterParameter.h  DataContainerArrayProxyFilterParameter.cpp  DataContainerArrayProxyFilterParameter.h  DataContainerCreationFilterParameter.cpp  (+127 more)
Source/SIMPLib/Geometry/: EdgeGeom.h  (+42 more)
Source/SVWidgetsLib/: CMakeLists.txt
(+1777 files in other folders)
